PSC EXAM/2_compile_errors.txt
Compilation started at 12/19/2023, 5:36:08 PM
d:\Cpro\fpc-advanced-classroom-1st-year-assignment-Siva117-star\PSC EXAM\2.c: In function 'main':
d:\Cpro\fpc-advanced-classroom-1st-year-assignment-Siva117-star\PSC EXAM\2.c:12:9: error: void value not ignored as it ought to be
   12 |     a[n]=input_array_elements(n,a);
      |         ^
d:\Cpro\fpc-advanced-classroom-1st-year-assignment-Siva117-star\PSC EXAM\2.c:13:16: error: too few arguments to function 'factorial'
   13 |     result[20]=factorial();
      |                ^~~~~~~~~
d:\Cpro\fpc-advanced-classroom-1st-year-assignment-Siva117-star\PSC EXAM\2.c:4:6: note: declared here
    4 | void factorial(int n,int arr[n],int result[]);
      |      ^~~~~~~~~
d:\Cpro\fpc-advanced-classroom-1st-year-assignment-Siva117-star\PSC EXAM\2.c:14:12: error: 'num' undeclared (first use in this function)
   14 |     output(num,result[20]);
      |            ^~~
d:\Cpro\fpc-advanced-classroom-1st-year-assignment-Siva117-star\PSC EXAM\2.c:14:12: note: each undeclared identifier is reported only once for each function it appears in
d:\Cpro\fpc-advanced-classroom-1st-year-assignment-Siva117-star\PSC EXAM\2.c:14:22: warning: passing argument 2 of 'output' makes pointer from integer without a cast [-Wint-conversion]
   14 |     output(num,result[20]);
      |                ~~~~~~^~~~
      |                      |
      |                      int
d:\Cpro\fpc-advanced-classroom-1st-year-assignment-Siva117-star\PSC EXAM\2.c:5:25: note: expected 'int *' but argument is of type 'int'
    5 | void output(int num,int result[]);
      |                     ~~~~^~~~~~~~
d:\Cpro\fpc-advanced-classroom-1st-year-assignment-Siva117-star\PSC EXAM\2.c: In function 'factorial':
d:\Cpro\fpc-advanced-classroom-1st-year-assignment-Siva117-star\PSC EXAM\2.c:36:16: warning: 'return' with a value, in function returning void
   36 |         return 2;
      |                ^
d:\Cpro\fpc-advanced-classroom-1st-year-assignment-Siva117-star\PSC EXAM\2.c:30:6: note: declared here
   30 | void factorial(int n,int arr[n],int result[]){
      |      ^~~~~~~~~
Compilation finished at 12/19/2023, 5:36:08 PM
